# ChangeLog for dev-ruby/acts-as-taggable-on
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*acts-as-taggable-on-3.2.3 (23 May 2014)

  23 May 2014; Hans de Graaff <graaff@gentoo.org>
  +acts-as-taggable-on-3.2.3.ebuild:
  Version bump.

*acts-as-taggable-on-3.1.1-r1 (24 Apr 2014)

  24 Apr 2014; Hans de Graaff <graaff@gentoo.org>
  +acts-as-taggable-on-3.1.1-r1.ebuild:
  Intall the db migrations as well.

*acts-as-taggable-on-3.1.1 (11 Apr 2014)

  11 Apr 2014; Hans de Graaff <graaff@gentoo.org>
  acts-as-taggable-on-2.4.1.ebuild, acts-as-taggable-on-3.0.1.ebuild,
  acts-as-taggable-on-3.0.2.ebuild, acts-as-taggable-on-3.1.0.ebuild,
  +acts-as-taggable-on-3.1.1.ebuild:
  Version bump. Fix rspec-rails dependency.

*acts-as-taggable-on-3.1.0 (04 Apr 2014)

  04 Apr 2014; Hans de Graaff <graaff@gentoo.org>
  +acts-as-taggable-on-3.1.0.ebuild:
  Version bump.

*acts-as-taggable-on-3.0.2 (27 Mar 2014)

  27 Mar 2014; Hans de Graaff <graaff@gentoo.org>
  +acts-as-taggable-on-3.0.2.ebuild:
  Version bump.

  21 Feb 2014; Hans de Graaff <graaff@gentoo.org>
  +acts-as-taggable-on-3.0.1.ebuild:
  Version bump.

*acts-as-taggable-on-3.0.1 (21 Feb 2014)

  21 Feb 2014; Hans de Graaff <graaff@gentoo.org>
  +acts-as-taggable-on-3.0.1.ebuild:
  Version bump.

  21 Feb 2014; Hans de Graaff <graaff@gentoo.org>
  -acts-as-taggable-on-2.3.3.ebuild:
  Cleanup.

  15 Jun 2013; Hans de Graaff <graaff@gentoo.org>
  acts-as-taggable-on-2.4.1.ebuild:
  Restrict tests due to compatibility issues, but they all pass.

*acts-as-taggable-on-2.4.1 (09 May 2013)

  09 May 2013; Hans de Graaff <graaff@gentoo.org>
  +acts-as-taggable-on-2.4.1.ebuild:
  Version bump.

*acts-as-taggable-on-2.3.3 (03 Oct 2012)

  03 Oct 2012; Hans de Graaff <graaff@gentoo.org>
  +acts-as-taggable-on-2.3.3.ebuild, +metadata.xml:
  Initial import.
