@@ -4,3 +4,4 @@ DIST acts-as-taggable-on-3.0.2.gem 37888 SHA256 521e4c438e00fb9eb15caf36233bd203
 DIST acts-as-taggable-on-3.1.0.gem 39936 SHA256 7253f063086ab501b6f9ab19ec638029e9aa988263da9582331af777762d97a9 SHA512 f6dae40f8767e2ab4de7a01343800eed0315bd0543277743ae547c9019f51c4221f469ed17eacaf97863245daab4076e32154562f3e9f4231176adfdbe3ccce5 WHIRLPOOL 171efd021216106157c3e2fd75c0aeaf9280eb71367c8ec1f1904145fc0f2ac3ac740fa70c592e9c437d6c0b285cf56896d37a8604363f211c976084e9b62202
 DIST acts-as-taggable-on-3.1.1.gem 39936 SHA256 413795c45d2eb1f7c18f65b2d19768bfe8c306795de48e0eeea2decfb8e347cb SHA512 bbbd5331d97c5db77373dba9b4e3285207d3f7c49d2f9d7258f67b1303aadcf66cf461f33c09e96ff325a671d8da929d4c9f82410a8acb2a1f7842fef95953a2 WHIRLPOOL 3c10f9981dcc027319529c7a18a7e36fbb23898410e6c3499194f5881fb87826f7170b385d41fdda7be927c0579a93297b0f148f3648631613efe00ee7483b20
 DIST acts-as-taggable-on-3.2.3.gem 45056 SHA256 7bfbb2fe343f3f6022813c616ae93f7d625e3f8c6b706fa0fe51bea45faa49fd SHA512 7ff78a4439faf8d746df88f660a7743e6ce7539f1ea2fa10513003af153dc606a28d663d7523ac486cbdde39aa8e50c16d9840a9ccc60bb3fef5637931133cd7 WHIRLPOOL 162ac3c40315e93544404d5533d6f7ec0b80ab80f833de476403014c86d75fc9c69b70287fbef76fc5013cd031dae73430a6def17c01821868d9dc720cc2eac5
+DIST acts-as-taggable-on-3.2.6.gem 44544 SHA256 171a1e68a632cc9c9bc853f65c980db161ccb942c22dcc1a968d2333014fa12c SHA512 18ab71abb1dc8171222ff66a024b07be54ed9bad214dae3067294599b185bf4f9004e63852494ca7bab8f4953351099f6f126f15ec6466d5cd08fcaef4536bcb WHIRLPOOL 249e3b831303f71f5c170042e38962e3cc7a4380837198ef71dd0709f3e56d95f6acbb722385bb8a1d64cc733c24ca2d9f132bbfc66f65b3e65ddbe666af475f
