@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*acts-as-taggable-on-3.2.6 (06 Jun 2014)
+
+  06 Jun 2014; Hans de Graaff <graaff@gentoo.org>
+  +acts-as-taggable-on-3.2.6.ebuild:
+  Version bump.
+
 *acts-as-taggable-on-3.2.3 (23 May 2014)
 
   23 May 2014; Hans de Graaff <graaff@gentoo.org>
